wordpress/wp-content/themes/ripple/assets/less/wordpress.less
/* ... */
/* Landscape phones and down */
@media (max-width: 480px) { 
    body {
        font-size: 12px;
    }
    .wrapper {
        width: auto;
    }
// Home Page Mobile Style
#home-page-logo {
    width: 39%;
    float: left;
    position: absolute;
    left: 0;
    right: 0;
    margin-top: 8px;
}
.page article.video-area {
    width: 400px;
}
.entry-content.video {
   // margin: 131px 0 0 4%;
    width: 100%;
}
.entry-content.callout.video h1 {
    font-size: 44px;
    margin: 0 auto 44px;
    text-align: center;
    width: 80%;
}

.text-area.entry-content {
    margin: 0 auto 142px;
}
// Mobile Header Navigation
.logo {
    float: none;
    margin: 10px auto;
    width: 53%;
}
.dashboard {
    float: none;
    margin: 0 auto 11px;
    width: 100%;
}
.transaction-feed {
    font-size: 75%;
    width: 100%;
}
.wallet {
    float: none;
    margin-left: 0;
}
button.btn-wallet {
    margin-left: 0;
    padding: 24px 23px;
    width: 100%;
}
// Mobile Navigation
nav.header-navigation {
    bottom: auto;
    float: none;
    height: 30px;
    position: relative;
    //width: 100%;
    max-width: 316px;
	margin: 0 auto;
	padding-left: 8px;
}
nav.header-navigation ul li {
	//float: none;
}
nav.header-navigation ul li a {
  //  width: 100%;
  margin-right:5px;
  font-size: .8em;
}
.page .carousel article {
    width: 330px;
}
// Mobile Entry Content
.entry-content.callout h1 {
    font-size: 5rem;
    margin-bottom: 49px;
}
// Mobile Article Post Styles
article.post {
    padding: 30px 0;
    width: 80%;
}
// Mobile Footer Links
.footer-wrapper {
    padding: 20px;
}
.footer-links > li {
    float: none;
    margin-bottom: 20px;
    width: 100%;
}
.site-header {
    position: relative;
}
#main {
    padding-top: 0;
}
// Mobile Guide Nav
.entry-header {
    // background: @orange
}
// Guide Nav Mobile
.guide-nav.affix-top,
.guide-nav.affix,
.guide-nav.affix-bottom.guide-nav {
    position: relative;
    width: 100%;
    top: 0;    
}
// Override column size on scrollspy-area
.scrollspy-area {
    width: 100%;
}
// Center Image on Mobile Topic Pages  
.topic-page .post-thumbnail {
    margin: 0 auto 30px;
    width: 290px;
}
.sharing-is-caring {
    display: table;
    height: 21px;
    overflow: hidden;
}
.sharing-is-caring li {
    float: left;
    height: 22px;
    margin: 0 6px;
    overflow: hidden;
}
.linkediner {
    width: 76px;
}
.mobile-linebreak {
    display: block;
    margin: 3px;
}
.blog .logo {
    display: table;
    float: none;
    left: 0;
    margin: 17px auto;
    right: 0;
    width: auto;
}
.blog .logo > a {
    float: left;
    width: 160px;
}
.logo h1 {
    float: left;
    font-size: 38px;
    text-align: right;
}
.content-area.with-sidebar {
    margin: 0 auto;
    width: auto;
}
.blog .with-sidebar article, 
.with-sidebar article.post.single-post {
    float: none;
    margin: 0 auto;
    padding-top: 20px !important;
    width: 95%;
}
.widget hr {
    margin: 0;
}

.thumbnail-info {
margin: auto !important;
width: 100% !important;
}

#devs-main .dev_img {
height: 90px !important;
}

.thumbnail-mm {
margin: 30px auto;
position: relative;
top: 100px;	
}

.wrapper.mm-thumbnail-wrapper {
margin-bottom: 20px;
}

}

//Additional adjustments
.mm_get_in_touch {
	margin: 0 0 20px 0;
}


//Dropdown menu adjustments

li.menu-item ul li {display:none;}

li.menu-item:hover ul.sub-menu li {
	display:block;
	line-height: 30px;
	width: 106px;
}

li.menu-item:hover ul.sub-menu li a {
	border-bottom: none;
}

ul.sub-menu {
	position: absolute;
	margin-top: 25px;
	float: right;
	background: @white;
	width: 78px;
}

@media (max-width: 480px) {
	ul.sub-menu {
		display: none;
	}
}

span.num_transactions, span.volume_traded {
color: #fff;
font-size: 2.4rem;
font-weight: 300;
}

.entry-content ul li ul li {
list-style: circle outside none !important;
margin-left: 18px;
}

.learn_more {
	color: @blue;
	position: relative;
	top:15px;
	font-size: 1.2em;
}

.page .entry-content {
	text-align: left;
	
	p {
		line-height: 22px;
	}
	
	h4 {
		line-height: 1.4;
	}

}

.market-makers .contact_us a:hover, .page-id-2581 .contact_us a:hover {
	color: #fff;
}

//Additional Blog Adjustments
.blog { 
	.transaction-feed {display:none;}

	.entry-content a {
		color: @blue;
	}

	.entry-content img {
		max-width: 100%;
	}

	.logo img {
		max-width:100%;
	}
	
	.with-sidebar .post-thumbnail.col-sm-3 {
		margin: 0 0 10px 0;
	}
	
	.entry-content {
		max-width: 640px;
	}
	
	span.the_date {
		color: #999;
	}
	@media (min-width: 1145px) { 
		.wrapper {
			width:1140px !important;
		}
	}
}

